--- a/netkliks-app/src/app/components/card/card.css
+++ b/netkliks-app/src/app/components/card/card.css
@@ -1,5 +1,9 @@
-.content-cards__item {
+:host {
   width: calc((100% - (30px * 2)) / 3);
+}
+
+.content-cards__item {
+  width: 100%;
   text-decoration: none;
 }
 
@@ -56,15 +60,22 @@
   margin: 0;
 }
 
-:host {
-  width: calc((100% - 60px) / 3);
+
 
   @media (max-width: 991px) {
-    width: calc((100% - 30px) / 2);
+    :host {
+      width: calc((100% - (30px * 2)) / 3);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    :host {
+      width: calc((100% - (30px * 1)) / 2);
+    }
   }
 
   @media (max-width: 480px) {
-    width: 100%;
-    min-width: 100%;
+    :host {
+      width: 100%
+    }
   }
-}
