--- a/netkliks-app/src/app/components/header/header.css
+++ b/netkliks-app/src/app/components/header/header.css
@@ -1,55 +1,59 @@
 .header {
-    margin-top: 34px;
-    margin-bottom: 15px;
+  margin-top: 34px;
+  margin-bottom: 15px;
 }
 
-.header-box { 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 1);
 }
 
 .header-logo h1 {
-    margin: 0;
-    font-family: Inter;
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 29px;
+  margin: 0;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 29px;
 }
 
 .header-logo p {
-    margin: 0;
-    font-family: Inter;
-    font-size: 12px;
-    font-weight: 300;
-    line-height: 15px;
+  margin: 0;
+  font-family: Inter;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 15px;
 }
 
 .header-controls a {
-    color: rgba(0, 0, 0, 1);
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 17px;
-    text-decoration: none;
+  color: rgba(0, 0, 0, 1);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-decoration: none;
 }
 
 .header-controls a:hover {
-    color: rgba(255, 73, 73); 
+  color: rgba(255, 73, 73);
 }
 
 .header-controls--mobile {
-    display: none;
-    align-self: flex-start;
+  display: none;
+  align-self: flex-start;
 }
 
 @media (max-width: 768px) {
+  .header-controls {
+    display: none;
+  }
 
-    .header-controls {
-        display: none;
-    }
-
-    .header-controls--mobile {
-        display: block;
-    }
+  .header-controls--mobile {
+    display: block;
+  }
 }
